Some tar-lvm fixes/enhancements:   - ssd-backup exit not code checked by tar-lvm-one (not needed)   - ssd-backup is able to start/stop systemd services with arguments   - tar-lvm-all prints vms/hosts being backed up to console as well   - ssd-backup example configuration contains commened lsof

--- a/install/etc/ssd-backup.conf
+++ b/install/etc/ssd-backup.conf
@@ -39,6 +39,8 @@ survruser ntp
 ### commands to run at the end of the stop mode
 # format: stopcomm <command> <arg1> ... <argN>
 
+#stopcomm echo *** lsof /var
+#stopcomm lsof /var
 #stopcomm echo "SSD stopped..."
 
 
